--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Navigation Bar -->
         <nav>
             <section class="nav-logo-container">
-                <a href="/">
+                <a href="index.html">
                     <img src="./assets/img/Logo-negro.png" alt="Logo de mi blog">
                 </a>
             </section>
@@ -36,7 +36,7 @@
         <section>
             <p class="home-main-text"> Conoce las novedades y noticias del Mundo Tech </p>
             <button class="home-main-button">
-                <a href="/blogs.html">Entra ya!</a>
+                <a href="blogs.html">Entra ya!</a>
             </button>
         </section>
     </main>
