--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/font/flaticon.css">
     <title>Mi Blog</title>
 </head>
-<body>
+<body class="home-body">
     <header>
         <!-- Section of Icons Social Network -->
         <section class="header-icons-container">
@@ -32,6 +32,7 @@
             </section>
         </nav>
     </header>
+    
     <main class="home-main">
         <section>
             <p class="home-main-text"> Conoce las novedades y noticias del Mundo Tech </p>
