--- a/perfil.html
+++ b/perfil.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link rel="stylesheet" href="./css/font/flaticon.css">
+    <link rel="stylesheet" href="./css/media-queries.css">
     <title>Mi Blog</title>
 </head>
 
@@ -44,27 +45,27 @@
                 </div>
 
                 <div class="profile-description-container">
-                    <h1>Hola !</h1>
+                    <h2>Hola !</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et maximus dolor, et vestibulum massa. Donec finibus tempor nibh, fermentum posuere augue malesuada nec. Integer est turpis, pretium a luctus in, vehicula ut risus.</p>
                 </div>
             </div>
         </section>
 
-        <section class="profile-projects-container">
+        <section class="profile-main-proyect">
             <div class="grid-container">
                 <h3>Proyectos</h3>
-                <article class="project-container">
-                    <h2>Texto</h2>
+                <article class="proyect-container">
+                    <h4>Texto</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et maximus dolor, et vestibulum massa. Donec finibus tempor nibh, fermentum posuere augue malesuada nec. Integer est turpis, pretium a luctus in, vehicula ut risus.</p>
                 </article>
 
-                <article class="project-container">
-                    <h2>Texto</h2>
+                <article class="proyect-container">
+                    <h4>Texto</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et maximus dolor, et vestibulum massa. Donec finibus tempor nibh, fermentum posuere augue malesuada nec. Integer est turpis, pretium a luctus in, vehicula ut risus.</p>
                 </article>
 
-                <article class="project-container">
-                    <h2>Texto</h2>
+                <article class="proyect-container">
+                    <h4>Texto</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et maximus dolor, et vestibulum massa. Donec finibus tempor nibh, fermentum posuere augue malesuada nec. Integer est turpis, pretium a luctus in, vehicula ut risus.</p>
                 </article>
             </div>
